--- a/index.html
+++ b/index.html
@@ -1,24 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Meme Generator</title>
+    <title>Memegen</title>
 </head>
-<body onload="onInit()">
-    <div class="canvas-container">
-        <canvas height="height" width="100"></canvas>
-    </div>
-    <input type="text" class="meme-text" onkeyup="onMemeTxtChange(this)"></input>
 
-    <div class="gallery">
-        <img src="img/2.jpg" id="2" class="gallery-img" onclick="onImgChange(this)">
-        <img src="img/3.jpg" id="3" class="gallery-img" onclick="onImgChange(this)">
-    </div>
+<body onload="onInit()">
+    <section class="header">
+        <div class="logo"></div>
+        <div class="nav"></div>
+    </section>
+    <section class="main-container">
+        <div class="editor-container">
+            <div class="canvas-container">
+                <canvas height="height" width="100"></canvas>
+            </div>
+            <div class="control-panel">
+                <input type="text" class="meme-text" onkeyup="onChangeMemeTxt(this)"></input>
+                <button class="txt-size" onclick="onChangeTxtSize(5)">A+</button>
+                <button class="txt-size" onclick="onChangeTxtSize(-5)">A-</button>
+                <button class="txt-pos" onclick="onChangeTxtPos(-5)">🢁</button>
+                <button class="txt-pos" onclick="onChangeTxtPos(5)">🢃</button>
+                <button class="txt-switch" onclick="onChangeSelectedLine()">⮃</button>
+                <button class="txt-add" onclick="onAddLine()">➕</button>
+                <button class="txt-remove" onclick="onRemoveLine()">🗑</button>
+            </div>
+
+            <div class="gallery">
+                <img src="img/2.jpg" id="2" class="gallery-img" onclick="onChangeImg(this)">
+                <img src="img/3.jpg" id="3" class="gallery-img" onclick="onChangeImg(this)">
+            </div>
+        </div>
+    </section>
+    <section class="footer"></section>
 
     <script src="js/meme-service.js"></script>
     <script src="js/meme-controller.js"></script>
 </body>
+
 </html>
